# Descender

./: .gitignore  CMakeLists.txt  defaults.ini  saved.ini
Models/Space/: GameLevel.txt
Models/Space_h2b/: Enemy Bomb.h2b  Enemy Bullet.h2b  Enemy Type Baiter.h2b  Enemy Type Bomber.h2b  Enemy Type Human.h2b  Enemy Type Lander.h2b  Enemy Type Mutant.h2b  Enemy Type Pod.h2b  Enemy Type Swarmer.h2b  Player One.h2b
Models/Space_obj_mtl/: EnemyBomb.mtl  EnemyBullet.mtl  EnemyTypeBaiter.mtl  EnemyTypeBomber.mtl  EnemyTypeHuman.mtl  EnemyTypeLander.mtl  EnemyTypeMutant.mtl  EnemyTypePod.mtl  EnemyTypeSwarmer.mtl  LazerBullet.mtl  PlayerOne.mtl
Shaders/: ColliderVertexShader.glsl  FragmentShader.glsl  TerrainFragmentShader.glsl  TerrainVertexShader.glsl  TextFragmentShader.glsl  TextVertexShader.glsl  UIFragmentShader.glsl  UIVertexShader.glsl
Source/: Application.cpp  Application.h  Main.cpp  Precompiled.h
Source/Components/: Gameplay.h  Identification.h  Physics.h  Visuals.h
Source/Entities/: EnemyBulletData.cpp  EnemyBulletData.h  EnemyData.cpp  EnemyData.h  PlayerBulletData.cpp  PlayerBulletData.h  PlayerData.cpp  PlayerData.h  PowerUpData.cpp  PowerUpData.h  Prefabs.cpp  Prefabs.h
Source/Events/: Levelevents.h  Playevents.h
Source/Systems/: EnemyBulletLogic.cpp  EnemyBulletLogic.h  EnemyLogic.cpp  EnemyLogic.h  GamePlayObjs.h  LevelLogic.cpp  LevelLogic.h  PhysicsLogic.cpp  PhysicsLogic.h  PlayerBulletLogic.cpp  PlayerBulletLogic.h  PlayerLogic.cpp  PlayerLogic.h  PowerUpLogic.cpp  PowerUpLogic.h  colliderRenderer.cpp  colliderRenderer.h  load_data_oriented.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h
Source/Utils/: FileIntoString.h  OpenGLExtensions.h
freetype/: CMakeCache.txt
gateware-main/: Gateware.h
xml/: playerHud.xml
